--- a/helloword/hihicute.html
+++ b/helloword/hihicute.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>hihi cute</title>
 </head>
-</h1> hello,try to take care of me</h1>
-</h2>I Keep keep bleeding love</h2>
 
 </body>
+see you bye bye.
 </html>
