--- a/try to do something/I feel the difficulty.html
+++ b/try to do something/I feel the difficulty.html
@@ -8,6 +8,6 @@
  <h1> 有點困難但我努力學習</h1>
  <p> 我好棒喔對吧 </p>
  <p>我想要<strong>這邊是粗的</strong>，然後<em>這邊是斜體字</em>是不是很厲害呢?</p>
-
+ <h2>通常廣告都會有副標題</h2>
 </body>
 </html>
